--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://avkravchenko.github.io/ikamet-test",
+  "homepage": "https://avkravchenko.github.io/Ikamet-test",
   "name": "-ikamet-test",
   "version": "0.0.0",
   "private": true,
