--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://avkravchenko.github.io/ikamet-test",
+  "homepage": "https://avkravchenko.github.io/Ikamet-test",
   "name": "-ikamet-test",
   "version": "0.0.0",
   "private": true,
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d ikamet-test/dist -b deploy-branch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
